seaqt/QtWidgets/gen_qtoolbox.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QToolBox QToolBox;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QToolBox* QToolBox_new(QWidget* parent);
QToolBox* QToolBox_new2();
QToolBox* QToolBox_new3(QWidget* parent, int f);
QMetaObject* QToolBox_metaObject(const QToolBox* self);
void* QToolBox_metacast(QToolBox* self, const char* param1);
int QToolBox_metacall(QToolBox* self, int param1, int param2, void** param3);
struct miqt_string QToolBox_tr(const char* s);
int QToolBox_addItem(QToolBox* self, QWidget* widget, struct miqt_string text);
int QToolBox_addItem2(QToolBox* self, QWidget* widget, QIcon* icon, struct miqt_string text);
int QToolBox_insertItem(QToolBox* self, int index, QWidget* widget, struct miqt_string text);
int QToolBox_insertItem2(QToolBox* self, int index, QWidget* widget, QIcon* icon, struct miqt_string text);
void QToolBox_removeItem(QToolBox* self, int index);
void QToolBox_setItemEnabled(QToolBox* self, int index, bool enabled);
bool QToolBox_isItemEnabled(const QToolBox* self, int index);
void QToolBox_setItemText(QToolBox* self, int index, struct miqt_string text);
struct miqt_string QToolBox_itemText(const QToolBox* self, int index);
void QToolBox_setItemIcon(QToolBox* self, int index, QIcon* icon);
QIcon* QToolBox_itemIcon(const QToolBox* self, int index);
void QToolBox_setItemToolTip(QToolBox* self, int index, struct miqt_string toolTip);
struct miqt_string QToolBox_itemToolTip(const QToolBox* self, int index);
int QToolBox_currentIndex(const QToolBox* self);
QWidget* QToolBox_currentWidget(const QToolBox* self);
QWidget* QToolBox_widget(const QToolBox* self, int index);
int QToolBox_indexOf(const QToolBox* self, QWidget* widget);
int QToolBox_count(const QToolBox* self);
void QToolBox_setCurrentIndex(QToolBox* self, int index);
void QToolBox_setCurrentWidget(QToolBox* self, QWidget* widget);
void QToolBox_currentChanged(QToolBox* self, int index);
void QToolBox_connect_currentChanged(QToolBox* self, intptr_t slot);
struct miqt_string QToolBox_tr2(const char* s, const char* c);
struct miqt_string QToolBox_tr3(const char* s, const char* c, int n);
bool QToolBox_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QToolBox_virtualbase_metaObject(const void* self);
bool QToolBox_override_virtual_metacast(void* self, intptr_t slot);
void* QToolBox_virtualbase_metacast(void* self, const char* param1);
bool QToolBox_override_virtual_metacall(void* self, intptr_t slot);
int QToolBox_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QToolBox_override_virtual_event(void* self, intptr_t slot);
bool QToolBox_virtualbase_event(void* self, QEvent* e);
bool QToolBox_override_virtual_itemInserted(void* self, intptr_t slot);
void QToolBox_virtualbase_itemInserted(void* self, int index);
bool QToolBox_override_virtual_itemRemoved(void* self, intptr_t slot);
void QToolBox_virtualbase_itemRemoved(void* self, int index);
bool QToolBox_override_virtual_showEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_showEvent(void* self, QShowEvent* e);
bool QToolBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_changeEvent(void* self, QEvent* param1);
bool QToolBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QToolBox_virtualbase_sizeHint(const void* self);
bool QToolBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QToolBox_override_virtual_initStyleOption(void* self, intptr_t slot);
void QToolBox_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QToolBox_override_virtual_devType(void* self, intptr_t slot);
int QToolBox_virtualbase_devType(const void* self);
bool QToolBox_override_virtual_setVisible(void* self, intptr_t slot);
void QToolBox_virtualbase_setVisible(void* self, bool visible);
bool QToolBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QToolBox_virtualbase_minimumSizeHint(const void* self);
bool QToolBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QToolBox_virtualbase_heightForWidth(const void* self, int param1);
bool QToolBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QToolBox_virtualbase_hasHeightForWidth(const void* self);
bool QToolBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QToolBox_virtualbase_paintEngine(const void* self);
bool QToolBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QToolBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QToolBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QToolBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QToolBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QToolBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QToolBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QToolBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QToolBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QToolBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QToolBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QToolBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QToolBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QToolBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QToolBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QToolBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QToolBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QToolBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);