seaqt/QtWidgets/gen_qtoolbox.nim


proc fcQToolBox_new(parent: pointer): ptr cQToolBox {.importc: "QToolBox_new".}
proc fcQToolBox_new2(): ptr cQToolBox {.importc: "QToolBox_new2".}
proc fcQToolBox_new3(parent: pointer, f: cint): ptr cQToolBox {.importc: "QToolBox_new3".}
proc fcQToolBox_metaObject(self: pointer, ): pointer {.importc: "QToolBox_metaObject".}
proc fcQToolBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QToolBox_metacast".}
proc fcQToolBox_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QToolBox_metacall".}
proc fcQToolBox_tr(s: cstring): struct_miqt_string {.importc: "QToolBox_tr".}
proc fcQToolBox_addItem(self: pointer, widget: pointer, text: struct_miqt_string): cint {.importc: "QToolBox_addItem".}
proc fcQToolBox_addItem2(self: pointer, widget: pointer, icon: pointer, text: struct_miqt_string): cint {.importc: "QToolBox_addItem2".}
proc fcQToolBox_insertItem(self: pointer, index: cint, widget: pointer, text: struct_miqt_string): cint {.importc: "QToolBox_insertItem".}
proc fcQToolBox_insertItem2(self: pointer, index: cint, widget: pointer, icon: pointer, text: struct_miqt_string): cint {.importc: "QToolBox_insertItem2".}
proc fcQToolBox_removeItem(self: pointer, index: cint): void {.importc: "QToolBox_removeItem".}
proc fcQToolBox_setItemEnabled(self: pointer, index: cint, enabled: bool): void {.importc: "QToolBox_setItemEnabled".}
proc fcQToolBox_isItemEnabled(self: pointer, index: cint): bool {.importc: "QToolBox_isItemEnabled".}
proc fcQToolBox_setItemText(self: pointer, index: cint, text: struct_miqt_string): void {.importc: "QToolBox_setItemText".}
proc fcQToolBox_itemText(self: pointer, index: cint): struct_miqt_string {.importc: "QToolBox_itemText".}
proc fcQToolBox_setItemIcon(self: pointer, index: cint, icon: pointer): void {.importc: "QToolBox_setItemIcon".}
proc fcQToolBox_itemIcon(self: pointer, index: cint): pointer {.importc: "QToolBox_itemIcon".}
proc fcQToolBox_setItemToolTip(self: pointer, index: cint, toolTip: struct_miqt_string): void {.importc: "QToolBox_setItemToolTip".}
proc fcQToolBox_itemToolTip(self: pointer, index: cint): struct_miqt_string {.importc: "QToolBox_itemToolTip".}
proc fcQToolBox_currentIndex(self: pointer, ): cint {.importc: "QToolBox_currentIndex".}
proc fcQToolBox_currentWidget(self: pointer, ): pointer {.importc: "QToolBox_currentWidget".}
proc fcQToolBox_widget(self: pointer, index: cint): pointer {.importc: "QToolBox_widget".}
proc fcQToolBox_indexOf(self: pointer, widget: pointer): cint {.importc: "QToolBox_indexOf".}
proc fcQToolBox_count(self: pointer, ): cint {.importc: "QToolBox_count".}
proc fcQToolBox_setCurrentIndex(self: pointer, index: cint): void {.importc: "QToolBox_setCurrentIndex".}
proc fcQToolBox_setCurrentWidget(self: pointer, widget: pointer): void {.importc: "QToolBox_setCurrentWidget".}
proc fcQToolBox_currentChanged(self: pointer, index: cint): void {.importc: "QToolBox_currentChanged".}
proc fcQToolBox_connect_currentChanged(self: pointer, slot: int) {.importc: "QToolBox_connect_currentChanged".}
proc fcQToolBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QToolBox_tr2".}
proc fcQToolBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QToolBox_tr3".}
proc fQToolBox_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QToolBox_virtualbase_metaObject".}
proc fcQToolBox_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_metaObject".}
proc fQToolBox_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QToolBox_virtualbase_metacast".}
proc fcQToolBox_override_virtual_metacast(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_metacast".}
proc fQToolBox_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QToolBox_virtualbase_metacall".}
proc fcQToolBox_override_virtual_metacall(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_metacall".}
proc fQToolBox_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QToolBox_virtualbase_event".}
proc fcQToolBox_override_virtual_event(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_event".}
proc fQToolBox_virtualbase_itemInserted(self: pointer, index: cint): void{.importc: "QToolBox_virtualbase_itemInserted".}
proc fcQToolBox_override_virtual_itemInserted(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_itemInserted".}
proc fQToolBox_virtualbase_itemRemoved(self: pointer, index: cint): void{.importc: "QToolBox_virtualbase_itemRemoved".}
proc fcQToolBox_override_virtual_itemRemoved(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_itemRemoved".}
proc fQToolBox_virtualbase_showEvent(self: pointer, e: pointer): void{.importc: "QToolBox_virtualbase_showEvent".}
proc fcQToolBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_showEvent".}
proc fQToolBox_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QToolBox_virtualbase_changeEvent".}
proc fcQToolBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_changeEvent".}
proc fQToolBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QToolBox_virtualbase_sizeHint".}
proc fcQToolBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_sizeHint".}
proc fQToolBox_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QToolBox_virtualbase_paintEvent".}
proc fcQToolBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_paintEvent".}
proc fQToolBox_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QToolBox_virtualbase_initStyleOption".}
proc fcQToolBox_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_initStyleOption".}
proc fQToolBox_virtualbase_devType(self: pointer, ): cint{.importc: "QToolBox_virtualbase_devType".}
proc fcQToolBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_devType".}
proc fQToolBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QToolBox_virtualbase_setVisible".}
proc fcQToolBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_setVisible".}
proc fQToolBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QToolBox_virtualbase_minimumSizeHint".}
proc fcQToolBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_minimumSizeHint".}
proc fQToolBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QToolBox_virtualbase_heightForWidth".}
proc fcQToolBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_heightForWidth".}
proc fQToolBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QToolBox_virtualbase_hasHeightForWidth".}
proc fcQToolBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_hasHeightForWidth".}
proc fQToolBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QToolBox_virtualbase_paintEngine".}
proc fcQToolBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_paintEngine".}
proc fQToolBox_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_mousePressEvent".}
proc fcQToolBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_mousePressEvent".}
proc fQToolBox_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_mouseReleaseEvent".}
proc fcQToolBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_mouseReleaseEvent".}
proc fQToolBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_mouseDoubleClickEvent".}
proc fcQToolBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_mouseDoubleClickEvent".}
proc fQToolBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_mouseMoveEvent".}
proc fcQToolBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_mouseMoveEvent".}
proc fQToolBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_wheelEvent".}
proc fcQToolBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_wheelEvent".}
proc fQToolBox_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_keyPressEvent".}
proc fcQToolBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_keyPressEvent".}
proc fQToolBox_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_keyReleaseEvent".}
proc fcQToolBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_keyReleaseEvent".}
proc fQToolBox_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_focusInEvent".}
proc fcQToolBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_focusInEvent".}
proc fQToolBox_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_focusOutEvent".}
proc fcQToolBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_focusOutEvent".}
proc fQToolBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_enterEvent".}
proc fcQToolBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_enterEvent".}
proc fQToolBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_leaveEvent".}
proc fcQToolBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_leaveEvent".}
proc fQToolBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_moveEvent".}
proc fcQToolBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_moveEvent".}
proc fQToolBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_resizeEvent".}
proc fcQToolBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_resizeEvent".}
proc fQToolBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_closeEvent".}
proc fcQToolBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_closeEvent".}
proc fQToolBox_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_contextMenuEvent".}
proc fcQToolBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_contextMenuEvent".}
proc fQToolBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_tabletEvent".}
proc fcQToolBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_tabletEvent".}
proc fQToolBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_actionEvent".}
proc fcQToolBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_actionEvent".}
proc fQToolBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_dragEnterEvent".}
proc fcQToolBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_dragEnterEvent".}
